--- a/CorrErrorPropTool.ipynb
+++ b/CorrErrorPropTool.ipynb
@@ -81,8 +81,8 @@
     "            \n",
     "        return varN\n",
     "    \n",
-    "    def sigma_N(self):\n",
-    "        return np.sqrt(self.var_N())"
+    "    def sigma_N(self): \n",
+    "        return sp.sqrt(self.var_N())"
    ]
   },
   {
